# coc

./: .gitignore  .gitmodules  .pylintrc  README.md  creativity.txt  main.py  prompt.md  pyproject.toml  python.mdc  requirements.txt  run_gemi.py  run_muir_eval.py  simple_test.py  test_gemi.py  test_gemi_integration.py  test_gemini_pool.py  test_logging.py  tmp.py
coc/: __init__.py  config.py  main.py  secret.py
coc/bots/: llm.py  mod.py  seg.py
coc/data/: __init__.py  fulltask.py  interface.py  muir.py  zero.py  zero_wrong.py
coc/exec/: __init__.py  context.py  dag.py  mod.py  symbol_extraction.py
coc/exec/context/: brev.py  g1.py  info.py  mod.py  prompt_brev.md  prompt_brev.py
coc/prompts/: assets.py  mega.py  prompt_une.py  vsp.py  wrap.py
coc/prompts/baseline/: prompt_gemini.py
coc/prompts/tro/: brief.py  info_prompt.py  prompt_troi.py
coc/scripts/: run_gemini_baseline.py  use_filtered_tasks.py
coc/tool/: __init__.py  context copy.py  context.py  depth.py  factory.py  info.py  mod.py  prompt.md  sam.py  task.py
coc/tool/_3d/: example.py  image_to_3d.py  mod.py
coc/tool/context/: info.py  mod.py  prompt_brev.py
coc/tool/depth/: convert.py  mod.py
coc/tool/google_search/: __init__.py  mod.py  tti_how_to.md
coc/tool/grounding/: _51.py  __init__.py  dino.py  dino_server.py  draw.py  mod.py  mod_server.py  owl.py  owl_server.py  server.py
coc/tool/sam/: _51.py  __init__.py  example.py  mask.py  mask_db.py  mod.py  mod_server.py  nova.py  predictor.py  r1.py
coc/tool/vqa/: __init__.py  gemini.py  glm.py  gromini.py  local.py  mod.py  qwen.py
coc/tree/: fe.py  gemi.py  llm.py  main.py  old.py  qua.py  saveme.md  tro.py  une.py  webui_config.py
coc/tree/augustus/: augustus.md  design_details.md  few_shots.md  test_augustus.py
coc/tree/baseline/: gemini.py
coc/tree/evaluate/: README.md
coc/tree/llm/: __init__.py  mod.py
coc/tree/tro/: mod.py  prompt.py  prompt_critic.py
coc/util/: _51.py  __init__.py  filter_tasks.py  image.py  logging.py  make_prompt.fish  misc.py  text.py  type.py  vision.py
coc/util/grok/: mod.py
coc/util/lang/: postgres.py  state.py
coc/util/langgraph/: graph.py
dog/: jump.py  mod.py
scripts/: run_gemini_baseline.py  run_gemini_retry_and_filter.py  use_failed_tasks_dataset.py
tests/: config.py  run_webui_tests.py  test_augustus.py  test_code_execution.py  test_gemi_agent.py  test_gemi_integration.py  test_gemini_code_generation.py  test_gemini_pool.py  test_gemini_retry.py  test_image_loading.py
tests/basic/: test_color_conversion.py  test_langchain.py
tests/bots/: test_exec.py
tests/exec/: test_dag.py  test_mod.py  test_symbol_extraction.py
tests/tool/: concurrent_wrapper.py  test_contest_2.py  test_context.py
tests/tool/context/: test_grounding.py  (+1 more)
tests/tree/: test_qua.py  test_une.py  test_webui_integration.py
tests/util/: test_text.py
(+21 files in other folders)
